--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,13 @@
 		"multer": "^2.0.2"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.33.0",
 		"@types/node": "^24.3.0",
-		"nodemon": "^3.1.10"
+		"eslint": "^9.33.0",
+		"globals": "^16.3.0",
+		"jiti": "^2.5.1",
+		"nodemon": "^3.1.10",
+		"typescript-eslint": "^8.40.0"
 	},
 	"scripts": {
 		"start": "node --env-file=.env server.ts",
