--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
 		"convert-csv-to-json": "^3.5.0",
 		"cors": "^2.8.5",
 		"express": "^5.1.0",
-		"multer": "^2.0.2"
+		"multer": "^2.0.2",
+		"typescript": "^5.9.2"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.33.0",
