--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,18 @@
 	"devDependencies": {
 		"@eslint/js": "^9.33.0",
 		"@types/node": "^24.3.0",
+		"@vitest/coverage-v8": "3.2.4",
 		"eslint": "^9.33.0",
 		"globals": "^16.3.0",
 		"jiti": "^2.5.1",
 		"nodemon": "^3.1.10",
-		"typescript-eslint": "^8.40.0"
+		"typescript-eslint": "^8.40.0",
+		"vitest": "^3.2.4"
 	},
 	"scripts": {
 		"start": "node --env-file=.env server.ts",
-		"dev": "node --watch --env-file=.env.development server.ts"
+		"dev": "node --watch --env-file=.env.development server.ts",
+		"test": "vitest",
+		"test:coverage": "vitest --coverage"
 	}
 }
