--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
 		"eslint": "^9.33.0",
 		"globals": "^16.3.0",
 		"jiti": "^2.5.1",
-		"nodemon": "^3.1.10",
+		"supertest": "^7.1.4",
 		"typescript-eslint": "^8.40.0",
 		"vitest": "^3.2.4"
 	},
