--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "shawarma",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "private": true,
-  "workspaces": ["backend", "frontend"],
-  "scripts": {
-    "dev_backend": "yarn workspace backend dev",
-    "dev_frontend": "yarn workspace frontend dev",
-    "dev": "yarn workspace backend dev & yarn workspace frontend dev"
-  }
+	"name": "shawarma",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"private": true,
+	"workspaces": [
+		"backend",
+		"frontend"
+	],
+	"scripts": {
+		"dev_backend": "yarn workspace backend dev",
+		"dev_frontend": "yarn workspace frontend dev",
+		"dev": "yarn workspace backend dev & yarn workspace frontend dev",
+		"build": "yarn workspace frontend build & yarn workspace backend start"
+	}
 }
