--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
 		"globals": "^16.3.0",
 		"happy-dom": "^18.0.1",
 		"jsdom": "^26.1.0",
+		"msw": "^2.10.5",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.39.1",
 		"vite": "^7.1.2",
