feat: implement error handling and not found middleware, refactor file upload logic, and enhance SEO support

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"frontend"
 	],
 	"scripts": {
-		"dev_backend": "yarn workspace backend dev",
-		"dev_frontend": "yarn workspace frontend dev",
+		"test:backend": "yarn workspace backend test:coverage",
+		"test:frontend": "yarn workspace frontend test:coverage",
 		"dev": "yarn workspace backend dev & yarn workspace frontend dev",
 		"build": "yarn workspace frontend build & yarn workspace backend start"
 	}
