--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,8 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22.18.0
+          cache: 'yarn' # Enables Yarn caching
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
