--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,15 @@
-name: CI - Test and Build
+name: Frontend CI - Test and Build
 
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'frontend/**'
+      - '.github/workflows/ci.yml'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'frontend/**'
 
 jobs:
   test_and_build:
@@ -18,13 +23,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22.18.0
-          cache: 'yarn' # Enables Yarn caching
+          cache: 'yarn'
+          cache-dependency-path: 'frontend/yarn.lock'
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+      - name: Install frontend dependencies
+        run: |
+          cd frontend
+          yarn install --frozen-lockfile
 
-      - name: Run tests with Vitest
-        run: yarn test:frontend -- --run 
+      - name: Run frontend tests
+        run: |
+          cd frontend
+          yarn test -- --run
 
-      - name: Build project
-        run: yarn build
+      - name: Build frontend project
+        run: |
+          cd frontend
+          yarn build
