--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,15 @@
-name: Frontend CI - Test and Build
+name: Backend CI - Test and Build
 
 on:
   push:
     branches: [ main ]
     paths:
-      - 'frontend/**'
+      - 'backend/**'  # Change to backend directory
       - '.github/workflows/ci.yml'
   pull_request:
     branches: [ main ]
     paths:
-      - 'frontend/**'
+      - 'backend/**'  # Change to backend directory
 
 jobs:
   test_and_build:
@@ -24,19 +24,19 @@ jobs:
         with:
           node-version: 22.18.0
           cache: 'yarn'
-          cache-dependency-path: 'frontend/yarn.lock'
+          cache-dependency-path: 'backend/yarn.lock'  # Change to backend
 
-      - name: Install frontend dependencies
+      - name: Install backend dependencies
         run: |
-          cd frontend
+          cd backend  # Change to backend directory
           yarn install --frozen-lockfile
 
-      - name: Run frontend tests
+      - name: Run backend tests
         run: |
-          cd frontend
-          yarn test -- --run
+          cd backend  # Change to backend directory
+          yarn test -- --run  # Adjust if using a different test command
 
-      - name: Build frontend project
+      - name: Build backend project
         run: |
-          cd frontend
-          yarn build
+          cd backend  # Change to backend directory
+          yarn start  # Adjust if using a different build command
