--- a/.github/workflows/ci.frontend.yml
+++ b/.github/workflows/ci.frontend.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'frontend/**'
-      - '.github/workflows/ci.yml'
+      - '.github/workflows/ci.frontend.yml'
   pull_request:
     branches: [ main ]
     paths:
